Import puts objects under GitRepo rather than new folder with same name.